WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277562
Fix internal builds after
281757@main
https://bugs.webkit.org/show_bug.cgi?id=277562
Summary
Fix internal builds after 281757@main
Aditya Keerthi
Reported
2024-08-02 12:15:00 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-02 12:15:22 PDT
<
rdar://problem/133081079
>
Aditya Keerthi
Comment 2
2024-08-02 12:19:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31659
EWS
Comment 3
2024-08-02 12:22:11 PDT
Committed
281771@main
(7b0476eb1338): <
https://commits.webkit.org/281771@main
> Reviewed commits have been landed. Closing PR #31659 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug