Fix internal builds after 281757@main https://bugs.webkit.org/show_bug.cgi?id=277562 rdar://133081079

Unreviewed build fix.

Rename compile time flag to avoid redefinition.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/UIProcess/Cocoa/WKShareSheet.h:
* Source/WebKit/UIProcess/Cocoa/WKShareSheet.mm:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _showShareSheet:inRect:completionHandler:]):
* Source/WebKit/UIProcess/ios/WKPDFView.h:
* Source/WebKit/UIProcess/ios/WKPDFView.mm:
(-[WKPDFView dealloc]):
(-[WKPDFView actionSheetAssistant:shareElementWithURL:rect:]):

Canonical link: https://commits.webkit.org/281771@main